# prover

./: TODO.md  prover.cabal
src/: Prover.hs
src/Prover/: Constants.hs  Misc.hs  Parser.hs  Pretty.hs  SMTInterface.hs  Solve.hs  Types.hs
tests/neg/: prop_append_nil.nil.pr  prop_assoc.cons.pr
tests/pos/: Append.pr  prop_append_nil.cons.pr  prop_append_nil.nil.pr  prop_assoc.cons.pr  prop_assoc.nil.pr  prop_assoc.nil1.pr
